--- a/yaml/galaxy.yaml
+++ b/yaml/galaxy.yaml
@@ -183,8 +183,20 @@ metadata:
 data:
   00-galaxy.conf: |
     {
-      "name": "galaxy-sdn",
-      "type": "galaxy-sdn",
-      "capabilities": {"portMappings": true},
-      "cniVersion": "0.2.0"
+      "cniVersion": "0.3.1",
+      "plugins": [
+        {
+          "name": "galaxy-sdn",,
+          "type": "galaxy-sdn",
+          "capabilities": {
+            "portMappings": true
+          }
+        },
+        {
+          "type": "bandwidth",
+          "capabilities": {
+            "bandwidth": true
+          }
+        }
+      ]
     }
